syntax = "proto3";
package profile;

import "google/protobuf/timestamp.proto";

message ProfileRequest {
    string username = 1;
    string password = 2;
    string name = 3;
    string email = 4;
    int64 phone = 5;
    string address = 6;
}

message ProfileResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    int64 phone = 4;
    string address = 5;
    google.protobuf.Timestamp created_date = 6;
}

message LoginRequest {
    string api = 1;
    string username = 2;
    string password = 3;
}

message LoginResponse {
    string api = 1;
    int64 id = 2;
    bool loggedIn = 3;
}

message LogoutRequest {
    string api = 1;
    int64 id = 2;
}

message LogoutResponse {
    string api = 1;
    bool loggedOut = 2;
}

message ReadRequest{
    string api = 1;
    int64 id = 2;
}

message ReadResponse{
    string api = 1;
    ProfileResponse profile = 2;
}

message CreateRequest{
    string api = 1;
    ProfileRequest profile = 2;
}

message CreateResponse{
    string api = 1;
    int64 id = 2;
}

message UpdateRequest{
    string api = 1;
    int64 id = 2;
    ProfileRequest profile = 3;
}

message UpdateResponse{
    string api = 1;
    bool updated = 2;
}

message DeleteRequest{
    string api = 1;
    int64 id = 2;
}

message DeleteResponse{
    string api = 1;
    bool deleted = 2;
}

service ProfileService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}